k8s/blue-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-green-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mterrano1/case-tracker-deploy-example:1.0.1
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: regcred
