k8s/flask-db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-db-deployment
spec:
  selector:
    matchLabels:
      app: flask-db
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-db
    spec:
      containers:
        - name: flask-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: flask-db-persistent-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: flask-db-persistent-storage
          persistentVolumeClaim:
            claimName: flask-db-pvc
