k8s/flask.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: mterrano1/case-tracker-flask:1.1.0
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "--access-logfile", "-", "--error-logfile", "-", "app:app"]
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: regcred
