k8s/rails.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
        - name: rails
          image: mterrano1/case-tracker-rails:1.1.0
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
