k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
