k8s/flask-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-db-service
spec:
  selector:
    app: flask-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
