k8s/rails-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-db-service
spec:
  selector:
    app: rails-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
